k8s/policies/gatekeeper/disallow-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata: { name: k8spspprivilegedcontainer }
spec:
  crd:
    spec:
      names: { kind: K8sPSPPrivilegedContainer }
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspprivilegedcontainer
        violation[{"msg": msg}] {
          c := input_containers[_]
          c.securityContext.privileged
          msg := sprintf("Privileged container %q not allowed.", [c.name])
        }
        input_containers[c] { c := input.review.object.spec.containers[_] }
        input_containers[c] { c := input.review.object.spec.initContainers[_] }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata: { name: psp-privileged-container }
spec:
  match:
    kinds: [{ apiGroups: [""], kinds: [Pod] }]
    excludedNamespaces: [kube-system, gatekeeper-system, falco]
